--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,15 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+html,body{
+
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 html {
+  margin: 0;
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -60,6 +68,7 @@ body {
   background-color: #fff; }
 
 .fab-container {
+  margin: 0;
   position: fixed;
   bottom: 50px;
   right: 50px;
@@ -68,6 +77,7 @@ body {
 }
 
 .fab-icon-holder {
+  margin: 0;
   width: 50px;
   height: 50px;
   border-radius: 100%;
@@ -85,7 +95,6 @@ body {
   justify-content: center;
   height: 100%;
   font-size: 25px;
-  color: #ffffff;
 }
 
 .fab {
