--- a/css/navbarstyle.css
+++ b/css/navbarstyle.css
@@ -229,7 +229,7 @@
 }
 .home-section .home-content .bx-menu,
 .home-section .home-content .text{
-  color: transparent;
+  color: #11101d;
   font-size: 35px;
 }
 .home-section .home-content .bx-menu{
