--- a/css/style.css
+++ b/css/style.css
@@ -1636,7 +1636,7 @@ pre {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  color: #495057;
+  color: white;
   background-color: black;
   background-clip: padding-box;
   border: 1px solid #ced4da;
@@ -1655,7 +1655,7 @@ pre {
     background-color: transparent;
     border: 0; }
   .form-control:focus {
-    color: #495057;
+    color: white;
     background-color: black;
     border-color: #ffae7e;
     outline: 0;
